<resources>
    <string name="app_name">Food</string>
    <string name="bun_venit">BUN VENIT!</string>
    <string name="descopera">DESCOPERĂ</string>
    <string name="sari_peste">Sari peste</string>
    <string name="logare">Logare</string>
    <string name="textlogin">textLogin</string>
    <string name="email">Email</string>
    <string name="parola">Parola</string>
    <string name="linkregister">linkRegister</string>
    <string name="link">link</string>
    <string name="string_link" />
    <string name="nume">Nume</string>
    <string name="inregistreaza">Inregistreaza-te</string>

    <string name="calling_activity">calling_activity</string>
    <string name="profile_activity">profile_activity</string>
    <string name="edit_profile_fragment">Edit Profile</string>
    <string name="sign_out_fragment">Sign Out</string>
    <string name="profile_fragment">Profile</string>
    <string name="gallery">GALLERY</string>
    <string name="photo">PHOTO</string>
    <string name="string_open_camera">Open Camera</string>
    <string name="string_next">Next</string>

    <!-- dialog names -->
    <string name="confirm_password_dialog">ConfirmPaswordDialog</string>

    <!-- Firebase messages-->
    <string name="auth_failed">Failed to authenticate</string>
    <string name="auth_success"> Authentication success</string>

    <!-- Firebase database fields -->
    <string name="dbname_users">users</string>
    <string name="field_username">username</string>
    <string name="field_email">email</string>
    <string name="field_display_name">display_name</string>
    <string name="field_website">website</string>
    <string name="field_description">description</string>
    <string name="field_phone_number">phone_number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="poza_eteta">poza reteta</string>
    <string name="salata_de_legume">Salata de legume</string>
    <string name="creat_de_alexandra_calin">Creat de Alexandra Calin</string>
    <string name="selected_image">selected_image</string>
    <string name="selected_bitmap">selected_bitmap</string>
    <string name="return_to_fragment">return_to_fragment</string>
    <string name="title_activity_detailed_recipe">DetailedRecipe</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="nume_ingredient">Nume ingredient</string>
</resources>