<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.LoginActivity"
    android:background="@drawable/login">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="286dp"
        android:layout_height="52dp"
        android:background="@drawable/buton_logare"
        android:text="@string/logare"
        android:textColor="@color/white"
        android:fontFamily="@font/segoe_ui"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.794" />

    <ImageView
        android:id="@+id/linkRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/string_link"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.429"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/register" />

    <ImageView
        android:id="@+id/textLoginActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/textlogin"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.881"
        app:srcCompat="@drawable/textlogin" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="286dp"
        android:layout_height="52dp"
        android:autofillHints=""
        android:background="@drawable/text_user_pass"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:paddingStart="35dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.969" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="286dp"
        android:layout_height="52dp"
        android:ems="10"
        android:inputType="textPassword"
        android:background="@drawable/text_user_pass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.687"
        android:autofillHints=""
        android:hint="@string/parola"
        android:paddingStart="35dp"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="18dp"
        android:layout_height="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintVertical_bias="0.527"
        app:srcCompat="@drawable/iconita_mail" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="19dp"
        android:layout_height="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.527"
        app:srcCompat="@drawable/iconita_lock" />

</androidx.constraintlayout.widget.ConstraintLayout>