<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.RegisterActivity"
    android:background="@drawable/login">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="286dp"
        android:layout_height="52dp"
        android:background="@drawable/buton_logare"
        android:text="@string/inregistreaza"
        android:textColor="@color/white"
        android:fontFamily="@font/segoe_ui"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.794" />

    <ImageView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/textlogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.387"
        app:srcCompat="@drawable/creaza_cont" />

    <EditText
        android:id="@+id/name_field"
        android:layout_width="286dp"
        android:layout_height="52dp"
        android:autofillHints=""
        android:background="@drawable/text_user_pass"
        android:ems="10"
        android:hint="@string/nume"
        android:inputType="textPersonName"
        android:paddingStart="35dp"
        app:layout_constraintBottom_toTopOf="@+id/password_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.969" />

    <EditText
        android:id="@+id/email_field"
        android:layout_width="286dp"
        android:layout_height="52dp"
        android:autofillHints=""
        android:background="@drawable/text_user_pass"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:paddingStart="35dp"
        app:layout_constraintBottom_toTopOf="@+id/name_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLogin"
        app:layout_constraintVertical_bias="0.771" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="286dp"
        android:layout_height="52dp"
        android:autofillHints=""
        android:background="@drawable/text_user_pass"
        android:ems="10"
        android:hint="@string/parola"
        android:inputType="textPassword"
        android:paddingStart="35dp"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="19dp"
        android:layout_height="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/password_field"
        app:layout_constraintEnd_toEndOf="@+id/password_field"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="@+id/password_field"
        app:layout_constraintTop_toTopOf="@+id/password_field"
        app:layout_constraintVertical_bias="0.444"
        app:srcCompat="@drawable/iconita_lock" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/email_field"
        app:layout_constraintEnd_toEndOf="@+id/email_field"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="@+id/email_field"
        app:layout_constraintTop_toTopOf="@+id/email_field"
        app:layout_constraintVertical_bias="0.47"
        app:srcCompat="@drawable/iconita_mail" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/name_field"
        app:layout_constraintEnd_toEndOf="@+id/name_field"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="@+id/name_field"
        app:layout_constraintTop_toTopOf="@+id/name_field"
        app:layout_constraintVertical_bias="0.451"
        app:srcCompat="@drawable/iconita_user" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/purple1_DARK"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/buttonGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.279"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.899" />

</androidx.constraintlayout.widget.ConstraintLayout>